tests/negative/test_expr_deref_ptr_cn.orb
fnc main() {
    i32 x;
    ptr cn p = ptr(&x);
    *p;
}